visualization using PCA with 500 points

--- a/notebooks/Wines_EDA.ipynb
+++ b/notebooks/Wines_EDA.ipynb
@@ -1889,16 +1889,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_pv = list(df['province_varietal'].value_counts().nlargest(100).index)"
+    "top_pv = list(df['province_varietal'].value_counts().nlargest(500).index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1909,7 +1909,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------\n",
+      "California Pinot Noir\n",
+      "     feature     tfidf\n",
+      "0     cherry  0.392530\n",
+      "1  raspberry  0.239590\n",
+      "2       cola  0.214291\n",
+      "3  cranberry  0.147191\n",
+      "4        oak  0.146384\n",
+      "----------\n",
+      "California Cabernet Sauvignon\n",
+      "      feature     tfidf\n",
+      "0  blackberry  0.331884\n",
+      "1      tannin  0.268144\n",
+      "2     currant  0.236566\n",
+      "3         oak  0.228424\n",
+      "4      cherry  0.205507\n",
+      "----------\n",
+      "California Chardonnay\n",
+      "          feature     tfidf\n",
+      "0             oak  0.249679\n",
+      "1       pineapple  0.233951\n",
+      "2        buttered  0.231468\n",
+      "3  buttered toast  0.214983\n",
+      "4            pear  0.213809\n",
+      "----------\n",
+      "Bordeaux Bordeaux-style Red Blend\n",
+      "  feature     tfidf\n",
+      "0  tannin  0.362501\n",
+      "1   fruit  0.343704\n",
+      "2    ripe  0.201670\n",
+      "3    wood  0.196920\n",
+      "4    firm  0.177049\n",
+      "----------\n",
+      "Oregon Pinot Noir\n",
+      "        feature     tfidf\n",
+      "0         fruit  0.318417\n",
+      "1        cherry  0.257338\n",
+      "2  cherry fruit  0.163282\n",
+      "3     raspberry  0.139831\n",
+      "4           new  0.131224\n",
+      "----------\n",
+      "Piedmont Nebbiolo\n",
+      "    feature     tfidf\n",
+      "0    tannin  0.271290\n",
+      "1    cherry  0.249534\n",
+      "2     berry  0.191299\n",
+      "3    palate  0.177337\n",
+      "4  licorice  0.161865\n",
+      "----------\n",
+      "California Zinfandel\n",
+      "      feature     tfidf\n",
+      "0  blackberry  0.270550\n",
+      "1      cherry  0.195552\n",
+      "2      tannin  0.189449\n",
+      "3     alcohol  0.164275\n",
+      "4      pepper  0.161884\n",
+      "----------\n",
+      "Burgundy Chardonnay\n",
+      "        feature     tfidf\n",
+      "0         fruit  0.275684\n",
+      "1          ripe  0.246763\n",
+      "2  yellow fruit  0.219867\n",
+      "3          wood  0.188507\n",
+      "4       texture  0.188135\n",
+      "----------\n",
+      "Tuscany Red Blend\n",
+      "        feature     tfidf\n",
+      "0        cherry  0.284233\n",
+      "1        tannin  0.264580\n",
+      "2        palate  0.200692\n",
+      "3     alongside  0.199393\n",
+      "4  palate offer  0.160901\n",
+      "----------\n",
+      "Tuscany Sangiovese\n",
+      "     feature     tfidf\n",
+      "0     cherry  0.284490\n",
+      "1     tannin  0.246680\n",
+      "2     palate  0.190423\n",
+      "3  alongside  0.178441\n",
+      "4      berry  0.167548\n",
+      "----------\n",
+      "California Shiraz\n",
+      "      feature     tfidf\n",
+      "0  blackberry  0.346320\n",
+      "1      pepper  0.267056\n",
+      "2      tannin  0.180215\n",
+      "3      cherry  0.172163\n",
+      "4    bottling  0.140259\n",
+      "----------\n",
+      "California Sauvignon Blanc\n",
+      "      feature     tfidf\n",
+      "0        lime  0.277725\n",
+      "1       lemon  0.234363\n",
+      "2       crisp  0.199640\n",
+      "3  gooseberry  0.167001\n",
+      "4       green  0.158130\n",
+      "----------\n",
+      "California Red Blend\n",
+      "      feature     tfidf\n",
+      "0  blackberry  0.273766\n",
+      "1      cherry  0.272645\n",
+      "2      tannin  0.225599\n",
+      "3   chocolate  0.143227\n",
+      "4      tannic  0.142129\n",
+      "----------\n",
+      "Burgundy Pinot Noir\n",
+      "  feature     tfidf\n",
+      "0  tannin  0.362120\n",
+      "1   fruit  0.342005\n",
+      "2    ripe  0.190948\n",
+      "3    firm  0.176394\n",
+      "4   aging  0.156686\n",
+      "----------\n",
+      "California Merlot\n",
+      "      feature     tfidf\n",
+      "0      cherry  0.391004\n",
+      "1      tannin  0.250551\n",
+      "2         oak  0.201916\n",
+      "3         dry  0.197320\n",
+      "4  blackberry  0.194414\n",
+      "----------\n",
+      "Mendoza Province Malbec\n",
+      "      feature     tfidf\n",
+      "0       berry  0.330796\n",
+      "1      finish  0.274616\n",
+      "2  blackberry  0.253706\n",
+      "3        plum  0.217422\n",
+      "4      palate  0.196687\n",
+      "----------\n",
+      "Washington Cabernet Sauvignon\n",
+      "  feature     tfidf\n",
+      "0  cherry  0.278424\n",
+      "1   fruit  0.273977\n",
+      "2    herb  0.259070\n",
+      "3  tannin  0.238003\n",
+      "4  barrel  0.212878\n",
+      "----------\n",
+      "Champagne Champagne Blend\n",
+      "   feature     tfidf\n",
+      "0    crisp  0.237637\n",
+      "1    fruit  0.217826\n",
+      "2     ripe  0.209517\n",
+      "3    ready  0.183439\n",
+      "4  texture  0.171313\n",
+      "----------\n",
+      "Northern Spain Tempranillo\n",
+      "  feature     tfidf\n",
+      "0   berry  0.316914\n",
+      "1  finish  0.253700\n",
+      "2    plum  0.253607\n",
+      "3   rioja  0.203470\n",
+      "4     oak  0.184059\n",
+      "----------\n",
+      "Washington Shiraz\n",
+      "  feature     tfidf\n",
+      "0   fruit  0.347640\n",
+      "1    herb  0.187233\n",
+      "2  barrel  0.155185\n",
+      "3    meat  0.142521\n",
+      "4  finish  0.138386\n"
+     ]
+    }
+   ],
+   "source": [
+    "for pv in top_pv[:20]:\n",
+    "    print(\"-\"*10)\n",
+    "    print(pv)\n",
+    "    print(look_at('pv', pv, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,12 +2100,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.sparse\n",
-    "scipy.sparse.save_npz('../data/intermediary/tfidf_matrix.npy', tfidf_matrix_pv)"
+    "scipy.sparse.save_npz('../data/intermediary/tfidf_matrix.npz', tfidf_matrix_pv)"
    ]
   },
   {
@@ -1947,6 +2126,17 @@
    "outputs": [],
    "source": [
     "province_varietal_df.to_csv('../data/intermediary/province_varietal.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/intermediary/top_pv.txt', 'w') as f:\n",
+    "    for pv in top_pv:\n",
+    "        f.write(f\"{pv}\\n\")"
    ]
   },
   {
