mixing tfidf and cluster data

--- a/notebooks/Wines Visualizer.ipynb
+++ b/notebooks/Wines Visualizer.ipynb
@@ -164,13 +164,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embed = top_df[['province_varietal', 'cluster', 'coord_x', 'coord_y']].set_index('province_varietal'\n",
+    "                                                                        ).to_dict(orient='index')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/intermediary/tfidf.json') as f:\n",
+    "    json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clusters = {}\n",
+    "for pv, vals in embed.items():\n",
+    "    clusters[pv] = {**vals, }"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('../data/processed/clusters.json', 'w') as fp:\n",
-    "    json.dump(top_df[['province_varietal', 'cluster', 'coord_x', 'coord_y']].set_index('province_varietal'\n",
-    "                                                                        ).to_dict(orient='index'), fp)"
+    "    json.dump(, fp)"
    ]
   },
   {
