--- a/notebooks/Wines Visualizer.ipynb
+++ b/notebooks/Wines Visualizer.ipynb
@@ -174,33 +174,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('../data/intermediary/tfidf.json') as f:\n",
-    "    json.load(f)"
+    "    words = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clusters = {}\n",
+    "clusters = []\n",
     "for pv, vals in embed.items():\n",
-    "    clusters[pv] = {**vals, }"
+    "    clusters.append({'name': pv, **vals, 'tfidf': words[pv]})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('../data/processed/clusters.json', 'w') as fp:\n",
-    "    json.dump(, fp)"
+    "    json.dump(clusters, fp)"
    ]
   },
   {
